[gd_scene load_steps=5 format=3 uid="uid://dgvag3i5lntot"]

[ext_resource type="Script" path="res://415. WeekEnd/Scene/week_end.gd" id="1_p1r82"]
[ext_resource type="Texture2D" uid="uid://btlwngssfbyxj" path="res://102. Icons/Assets/Skip_E.png" id="2_5rb5y"]
[ext_resource type="Texture2D" uid="uid://djlythr64jq44" path="res://102. Icons/Assets/strike_grey.png" id="3_161qh"]
[ext_resource type="Texture2D" uid="uid://ll0r0nod6rj3" path="res://102. Icons/Assets/strike_red.png" id="4_ceeeu"]

[node name="WeekEnd" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_p1r82")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 649.0
color = Color(0, 0, 0, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.025
autostart = true

[node name="SkipE" type="Sprite2D" parent="."]
position = Vector2(1064, 610)
scale = Vector2(0.523438, 0.523438)
texture = ExtResource("2_5rb5y")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 239.0
offset_top = 166.0
offset_right = 904.0
offset_bottom = 283.0
text = "Test"

[node name="StrikeGrey2" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.52549)
position = Vector2(513.125, 514.125)
scale = Vector2(0.219727, 0.219727)
texture = ExtResource("3_161qh")

[node name="StrikeGrey" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.52549)
position = Vector2(465.125, 514.125)
scale = Vector2(0.219727, 0.219727)
texture = ExtResource("3_161qh")

[node name="StrikeGrey3" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.52549)
position = Vector2(556.125, 514.125)
scale = Vector2(0.219727, 0.219727)
texture = ExtResource("3_161qh")

[node name="StrikeRed2" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.52549)
position = Vector2(513.125, 514.125)
scale = Vector2(0.219727, 0.219727)
texture = ExtResource("4_ceeeu")

[node name="StrikeRed" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.52549)
position = Vector2(465.125, 514.125)
scale = Vector2(0.219727, 0.219727)
texture = ExtResource("4_ceeeu")

[node name="StrikeRed3" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.52549)
position = Vector2(556.125, 514.125)
scale = Vector2(0.219727, 0.219727)
texture = ExtResource("4_ceeeu")

[node name="Plastic Goal" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 237.0
offset_top = 432.0
offset_right = 902.0
offset_bottom = 549.0
text = "This Week Plastic caught:
1/7"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
